# Signal-Calling-Service

./: Cargo.toml  SERVER_FLOW.md  append_fix.py  docker-compose.yml  patch_ringrtc.py  verify_kdf.py  分析.txt  日志记录2.txt  脚本.md  记录.txt
GM-Signal-Calling-Service/: 脚本讲解
GM-Signal-Calling-Service/configs/: backend.env  frontend.env
GM-Signal-Calling-Service/scripts/: run_backend.sh  run_bootstrap.sh  run_frontend.sh  stop_daemon.sh
backend/: Cargo.toml
backend/src/: call.rs  connection.rs  http_server.rs  lib.rs  main.rs  sfu.rs  signaling_server.rs  sm2_wrapper.rs
configs/: backend.env  bootstrap.env  frontend.env
docker/bootstrap/src/: main.rs
frontend/: Cargo.toml
frontend/src/: api.rs  authenticator.rs  backend.rs  config.rs  frontend.rs  main.rs  storage.rs
frontend/src/api/: call_links.rs  v2.rs
scripts/: run_backend.sh  run_bootstrap.sh  run_frontend.sh  start_daemon.sh  stop_daemon.sh
sm2-rust/: Cargo.toml  build.rs
sm2-rust/src/: lib.rs  sm2_key.rs  sm2_sign.rs  wrapper.c
sm2-rust/tests/: sm2_sign.rs
