#
# Copyright (C) 2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-crypto"
version = "0.1.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
cbc = { version = "0.1", features = ["std", "zeroize"] }
ctr = { version = "0.9", features = ["zeroize"] }
displaydoc = { version = "0.2" }
ghash = { version = "0.5.0", features = ["zeroize"] }
hmac = { version = "0.12", features = ["reset"] }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
subtle = { version = "2.4" }
thiserror = { version = "1.0" }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5" }
hex = { version = "0.4" }
hex-literal = { version = "0.4" }
rand = { version = "0.8" }
serde = { version = "1.0" }
serde_json = "1.0"

[[bench]]
name = "aes_gcm"
harness = false

[build-dependencies]
cc = "1.0"

[lib]
name = "signal_crypto"
path = "src/lib.rs"
